src/Header.css
.app-header {
  width: 100%;
  height: 60px;
  margin-bottom: 50px;
}

.container-row {
  height: 100%;
  max-width: 720px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid black;
}

.container {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
}

.container.left {
  justify-content: flex-start;
}

.container.middle {
  justify-content: center;
}

.container.right {
  justify-content: flex-end;
}

.container button {
  background-color: floralwhite;
  border: none;
  margin: 0 32px;
  cursor: pointer;
}

.container button svg {
  height: 32px;
  width: 32px;
}

.title {
  color: rgba(0, 0, 0, 0.9);
  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
  font-size: 32px;
  font-weight: normal;
  letter-spacing: 2px;
}

